--- a/challenge-3-modal/app.css
+++ b/challenge-3-modal/app.css
@@ -1,3 +1,23 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #282C34;
+    color: white; 
+}
+
+.container {
+    text-align: center;
+}
+
+/* .modal {
+
+} */
+
+.modal__trigger {
+    color: white;
+    background-color: #B56827;
+    border: none;
+    padding: .6rem 1.5rem;
+    border-radius: 1rem;
+    outline: 0;
+    cursor: pointer;
 }
