--- a/challenge-1-tabs/app.css
+++ b/challenge-1-tabs/app.css
@@ -1,80 +1,82 @@
 .container {
-    background: #558DDD;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
+  background: #558ddd;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .tabs-component {
-    height: 300px;
-    width: 600px;
-    background-color: #ffffff;
-    padding: 1.5rem;
+  height: 300px;
+  width: 600px;
+  background-color: #ffffff;
+  padding: 1.5rem;
 }
 
 .tabs-component__inputs {
-    width: 100%;
-    display: flex;
-    margin-top: 1rem;
-    /* justify-content: space-around; */
+  width: 100%;
+  display: flex;
+  margin-top: 1rem;
+  /* justify-content: space-around; */
 }
 
 .tabs-component__input {
-    appearance: none;
-    border: 0;
-    border-bottom: 1px solid grey;
-    width: 60%;
-    margin-right: 4rem;
+  appearance: none;
+  border: 0;
+  border-bottom: 1px solid grey;
+  width: 60%;
+  margin-right: 4rem;
 }
 
 .tabs-component__item {
-    cursor: pointer;
-    color: grey;
-    margin-right: 1rem;
+  background-color: none;
+  border: 0;
+  font-size: 1rem;
+  outline: 0;
+  color: grey;
+  margin-right: 1rem;
 }
 
 .active {
-    color: #000000;
-    font-weight: bold;
-    text-decoration: underline;
+  color: #000000;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .tabs-component__button {
-    display: inline-block;
-    border: none;
-    padding: .5rem 1rem;
-    margin: 0;
-    text-decoration: none;
-    background: #0069ed;
-    color: #ffffff;
-    font-family: sans-serif;
-    font-size: 1rem;
-    cursor: pointer;
-    text-align: center;
-    transition: background 250ms ease-in-out, 
-                transform 150ms ease;
-    -webkit-appearance: none;
-    -moz-appearance: none;
+  display: inline-block;
+  border: none;
+  padding: 0.5rem 1rem;
+  margin: 0;
+  text-decoration: none;
+  background: #0069ed;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 .tabs-component__tabs {
-    margin-top: 1.5rem;
-    text-transform: uppercase;
+  margin-top: 1.5rem;
+  text-transform: uppercase;
 }
 
 .tabs-component__content {
-    margin-top: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 /* content styles */
 
 .content {
-    display: none;
-    color: #000000;
+  display: none;
+  color: #000000;
 }
 
 .content-active {
-    display: inline;
+  display: inline;
 }
