--- a/challenge-4/app.css
+++ b/challenge-4/app.css
@@ -17,6 +17,10 @@ body {
     color: white;
 }
 
+.video {
+    grid-column: span 8;
+}
+
 .video__container {
     background-color: #eeeeee;
     grid-column: span 8;
