method to add video data

--- a/challenge-4/app.css
+++ b/challenge-4/app.css
@@ -21,6 +21,11 @@ body {
     grid-column: span 8;
 }
 
+.video__form {
+    display: flex;
+    flex-direction: column;
+}
+
 .video__container {
     background-color: #eeeeee;
     grid-column: span 8;
