--- a/challenge-1-tabs/solution/app.css
+++ b/challenge-1-tabs/solution/app.css
@@ -18,6 +18,7 @@
     width: 100%;
     display: flex;
     margin-top: 1rem;
+    /* justify-content: space-around; */
 }
 
 .tabs-component__input {
