--- a/challenge-2-responsive-posts/app.css
+++ b/challenge-2-responsive-posts/app.css
@@ -3,8 +3,8 @@ body {
   padding: 1rem;
 }
 
-/* 
-    styles for when we start getting into desktop size
-*/
 @media screen and (min-width: 768px) {
+  /* 
+   add styles for going into tablet size and beyond
+*/
 }
